modified the styles of the nodes to make them visible in the grid, corrected the function parameter required

--- a/style.css
+++ b/style.css
@@ -11,4 +11,5 @@ body{
     display: flex;
     gap: 0px;
     padding: 0px;
+    justify-content: space-around;
 }
